--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
         </section>
         <video src="video.mp4" controls class="main-video"></video>
         <p class="text-content">Подписывайтесь на нас<br>Поделитесь последними новостями об автомобилях AITO</p>
-        <img src="pic1.jpg" alt="小图片1相关说明" class="small-pic">
-        <img src="pic2.jpg" alt="小图片2相关说明" class="small-pic">
+        <img src="brand images/Wechat.jpg" alt="Wechat" class="small-pic">
+        <img src="brand images/Whatsapp.jpg" alt="Whatsapp" class="small-pic">
     </main>
     <footer>
         <nav class="bottom-nav">
