--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </ul>
             <img src="brand images/AITO.png" alt="AITO logo" class="nav-logo">
             <ul class="right-nav">
-                <li><a href="#test-drive">тест-драйв</a></li>
+				<li><a href="test-drive.html">тест-драйв</a></li>
                 <li><a href="#contact-us">Связаться с нами</a></li>
             </ul>
         </nav>
