--- a/test-drive.html
+++ b/test-drive.html
@@ -13,15 +13,15 @@
     <header>
         <nav>
             <ul class="left-nav">
-                <li><a href="C:\Users\zidan\Desktop\Sherry Website Russia/index.html">ГЛАВНАЯ СТРАНИЦА</a></li> <!-- 修改链接为相对路径指向主页 -->
-                <li><a href="#m5">AITO M5</a></li>
-                <li><a href="#m7">AITO M7</a></li>
-                <li><a href="#m9">AITO M9</a></li>
+                <li><a href="index.html">ГЛАВНАЯ СТРАНИЦА</a></li>
+                <li><a href="index.html#m5">AITO M5</a></li>
+                <li><a href="index.html#m7">AITO M7</a></li>
+                <li><a href="index.html#m9">AITO M9</a></li>
             </ul>
             <img src="brand images/AITO.png" alt="AITO logo" class="nav-logo">
             <ul class="right-nav">
                 <li><a href="test-drive.html">тест-драйв</a></li>
-                <li><a href="#contact-us">Связаться с нами</a></li>
+                <li><a href="contact-us.html">Связаться с нами</a></li>
             </ul>
         </nav>
     </header>
